Version `5.0.0`: massively improved performance by utilizing Project Panama rather than JNA for keystate/interception calls, and improved `AimBotThread` sleeping to be more precise